<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    android:background="@color/black"
    tools:context=".chapterActivity">

    <TextView
        android:id="@+id/ChapterHeading"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:padding="16dp"
        android:textAlignment="center"

        android:text="@string/file_content_will_be_shown_here"
        android:lineSpacingExtra="8dp"
        android:textSize="16sp" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:padding="16dp">

        <TextView
            android:id="@+id/chapterContent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="viewStart"
            android:gravity="start"
            android:lineSpacingExtra="8dp"
            android:padding="16dp"
            android:text="@string/file_content_will_be_shown_here"
            android:textColor="@color/white"
            android:textSize="16sp" />

    </ScrollView>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="3">

        <Button
            android:id="@+id/prev"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_margin="8dp"
            tools:ignore="ButtonStyle"
            android:text="@string/previous" />

        <Button
            android:id="@+id/home"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_margin="8dp"
            tools:ignore="ButtonStyle"
            android:text="@string/home" />

        <Button
            android:id="@+id/next"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_margin="8dp"
            tools:ignore="ButtonStyle"
            android:text="@string/next" />

    </LinearLayout>

</LinearLayout>
