<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:layout_marginRight="20dp"
    android:layout_marginLeft="20dp"
    tools:context=".addNovel">
    <TextView
        android:id="@+id/urlView"
        android:text="@string/enter_url_here"
        android:textAlignment="center"
        android:fontFamily="sans-serif-condensed-medium"
        android:textSize="40sp"
        android:layout_marginBottom="30dp"
        android:background="@color/purple_200"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/inputTextLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:layout_editor_absoluteX="1dp"
        tools:layout_editor_absoluteY="240dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/inputEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:hint="@string/hint" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/addNovelButton"
        android:layout_marginTop="30dp"
        android:text="@string/add_novel"
        android:textSize="20sp"
        android:fontFamily="sans-serif-condensed-medium"
        android:background="@color/teal_200"
        android:layout_width="200dp"
        android:layout_height="wrap_content"/>
</LinearLayout>