<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    android:background="@color/black"
    android:weightSum="5"
    tools:context=".novelActivity">
    <TextView
        android:id="@+id/novelTitle"
        android:layout_width="match_parent"
        android:textSize="25sp"
        android:padding="5dp"
        android:textAlignment="center"
        android:layout_marginTop="20sp"
        android:layout_marginRight="20sp"
        android:layout_marginLeft="20sp"
        android:background="@color/teal_200"
        android:layout_weight="0"
        android:layout_height="wrap_content"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="140dp"
        android:padding="20dp"
        android:layout_weight="1.5"
        android:gravity="center"
        android:orientation="horizontal">
        <ImageView
            android:id="@+id/novelImage"
            android:layout_width="200dp"
            android:layout_marginEnd="20dp"
            android:layout_height="240dp"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <Button
                android:id="@+id/downloadChapsButton"
                android:text="@string/download"
                android:background="@color/purple_200"
                android:layout_marginBottom="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
            <Button
                android:id="@+id/continueReading"
                android:text="@string/continueReading"
                android:background="@color/teal_200"
                android:layout_marginBottom="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
            <Button
                android:id="@+id/startReading"
                android:text="@string/start"
                android:background="@color/yello"
                android:layout_width="match_parent"
                android:layout_marginBottom="10dp"
                android:layout_height="wrap_content"/>
            <Button
                android:id="@+id/homeButton"
                android:text="@string/home"
                android:background="@color/pink"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
        </LinearLayout>

    </LinearLayout>
    <TextView
        android:id="@+id/outputText"
        android:layout_width="match_parent"
        android:text="@string/click_a_button"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="10dp"
        android:textSize="20sp"
        android:textColor="@color/white"
        android:background="@color/gray"
        android:padding="20dp"
        android:textAlignment="center"
        android:textColorHighlight="@color/teal_200"
        android:fontFamily="sans-serif-medium"
        android:ellipsize="none"
        android:singleLine="false"
        android:breakStrategy="simple"
        android:layout_height="wrap_content"/>
    <ScrollView
        android:id="@+id/somescroll"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:padding="16dp"
        android:layout_weight="3.5">

        <LinearLayout
            android:id="@+id/chaptersList"
            android:orientation="vertical"
            android:gravity="center_horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    </ScrollView>

</LinearLayout>